--- a/project.html
+++ b/project.html
@@ -63,7 +63,8 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<a href="#" class="">images</a>
+						<a href="#" class="">images
+						</a>
 						<div>text</div>
 					</div>
 				</div>
