--- a/project.html
+++ b/project.html
@@ -63,9 +63,17 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<a href="#" class="">images
-						</a>
-						<div>text</div>
+					    <div class="img">
+					        <div class="img-left">
+					            <img src="images/01.jpg">
+					        </div><div class="img-right">
+					            <div class="img-top">
+					                <img src="images/02.jpg">
+					                <img src="images/03.jpg">
+					            </div>
+					        </div>
+					    </div>
+					    <div class="text">text</div>
 					</div>
 				</div>
 				<div class="col-md-4">
