--- a/project.html
+++ b/project.html
@@ -66,7 +66,8 @@
 					    <div class="img">
 					        <div class="img-left">
 					            <img src="images/01.jpg">
-					        </div><div class="img-right">
+					        </div>
+                            <div class="img-right">
 					            <div class="img-top">
 					                <img src="images/02.jpg">
 					                <img src="images/03.jpg">
