--- a/project.html
+++ b/project.html
@@ -74,7 +74,15 @@
 					            </div>
 					        </div>
 					    </div>
-					    <div class="text">text</div>
+					    <div class="text">
+					        <h4>Clothing</h4>
+					        <p>Starting from $49.99</p>
+					        <div class="btn-container">
+                                <a class="btn">
+					            <p>VIEW PRODUCTS</p>
+					        </a>
+                            </div>
+					    </div>
 					</div>
 				</div>
 				<div class="col-md-4">
