finished Top Categories

--- a/project.html
+++ b/project.html
@@ -78,7 +78,7 @@
 					        <h4>Clothing</h4>
 					        <p>Starting from $49.99</p>
 					        <div class="btn-container">
-                                <a class="btn">
+                                <a href="#" class="btn">
 					            <p>VIEW PRODUCTS</p>
 					        </a>
                             </div>
@@ -86,10 +86,52 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="card"></div>
+					<div class="card">
+					    <div class="img">
+					        <div class="img-left">
+					            <img src="images/04.jpg">
+					        </div>
+                            <div class="img-right">
+					            <div class="img-top">
+					                <img src="images/05.jpg">
+					                <img src="images/06.jpg">
+					            </div>
+					        </div>
+					    </div>
+					    <div class="text">
+					        <h4>Shoes</h4>
+					        <p>Starting from $56.00</p>
+					        <div class="btn-container">
+                                <a href="#" class="btn">
+					            <p>VIEW PRODUCTS</p>
+					        </a>
+                            </div>
+					    </div>
+					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="card"></div>
+					<div class="card">
+					    <div class="img">
+					        <div class="img-left">
+					            <img src="images/07.jpg">
+					        </div>
+                            <div class="img-right">
+					            <div class="img-top">
+					                <img src="images/08.jpg">
+					                <img src="images/09.jpg">
+					            </div>
+					        </div>
+					    </div>
+					    <div class="text">
+					        <h4>Bags</h4>
+					        <p>Starting from $27.00</p>
+					        <div class="btn-container">
+                                <a href="#" class="btn">
+					            <p>VIEW PRODUCTS</p>
+					        </a>
+                            </div>
+					    </div>
+					</div>
 				</div>
 			</div>
 		</div>
