making maket limited offer block

--- a/project.html
+++ b/project.html
@@ -135,6 +135,20 @@
 				</div>
 			</div>
 		</div>
+		<div class="btn-container">
+            <a href="#" class="btn all-categories">
+                <p>ALL CATEGORIES</p>
+            </a>
+        </div>
+        <div class="container limited-offer">
+            <div class="limited">
+                <div class="col-md-6 countdown-container">1</div>
+                <div class="col-md-6 limited-img">2</div>
+            </div>
+            <div class="old">
+                <div class="col-md-12">3</div>
+            </div>
+        </div>
 	</div>
 </body>
 
