trying made addaptive nav, fix 'mega menu' width

--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-6 left up_nav">
+			<div class="col-xl-6 col-lg-6 col-md-8 col-sm-12 left up_nav">
 				<a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> support@unishop.com</a>
 				<a href="#"><i class="fa fa-bell-o" aria-hidden="true"></i> 00 33 169 7720</a>
 				<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -22,20 +22,20 @@
 				<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 				<a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
 			</div>
-			<div class="col-md-6 right up_nav">
+			<div class="col-xl-6 col-lg-6 col-md-4 col-sm-12 right up_nav">
 				<span class="currency"><a href="#">$ USD</a></span>
 				<span><img src="images/GB.png"></span>
 				<a href="#"><i class="fa fa-download" aria-hidden="true"> </i> Get mobile app</a>
 			</div>
 		</div>
 		<div class="row nav">
-			<div class="col-md-3 col-sm-6 left_nav">
+			<div class="col-xl-3 left_nav">
 				<div class="hidden_menu">
 					<a href="#"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
 				</div>
 				<div class="logo"><a href="#"><img id="logo" src="images/logo.png"></a></div>
 			</div>
-			<div class="col-md-6 hidden-sm middle_nav">
+			<div class="col-xl-6 middle_nav">
 				<div class="my-flex-container">
 					<div class="active-menu"><a href="#">HOME</a></div>
 					<div><a href="#">SHOP</a></div>
@@ -46,7 +46,7 @@
 					<div><a href="#">COMPONENTS</a></div>
 				</div>
 			</div>
-			<div class="col-md-3 col-sm-6 right_nav">
+			<div class="col-xl-3 right_nav">
 				<div class="pull-right">
 					<div class="search"><i class="fa fa-search" aria-hidden="true"></i></div>
 					<div class="account"><i class="fa fa-user-o" aria-hidden="true"></i></div>
