--- a/project.html
+++ b/project.html
@@ -140,14 +140,22 @@
                 <p>ALL CATEGORIES</p>
             </a>
         </div>
-        <div class="container limited-offer">
-            <div class="limited">
-                <div class="col-md-6 countdown-container">1</div>
-                <div class="col-md-6 limited-img">2</div>
-            </div>
-            <div class="old">
-                <div class="col-md-12">3</div>
-            </div>
+        <div class="container-fluid">
+           <div class="limited-offer">
+				<div class="row limited">
+					 <div class="limited-col">
+					 	<div class="countdown-container">countdown</div>
+					 </div>
+					 <div class="limited-col">
+					 	<div class="limited-img"></div>
+					 </div>	
+				</div>
+				<div class="row old">
+					 <div class="collection-col">
+					 	<div class="collection">3</div>
+					 </div>
+				</div>
+			</div>
         </div>
 	</div>
 </body>
