working with offer block, countdown

--- a/project.html
+++ b/project.html
@@ -144,7 +144,15 @@
            <div class="limited-offer">
 				<div class="row limited">
 					 <div class="limited-col">
-					 	<div class="countdown-container">countdown</div>
+					 	<div class="countdown-container">
+					 		<div class="status-bar"></div>
+					 		<div class="limited-text">b</div>
+					 		<div class="btn-container">
+					 			<a href="#" class="btn all-categories offer-button">
+                					<p>VIEW OFFERS</p>
+           						 </a>
+					 		</div>
+					 	</div>
 					 </div>
 					 <div class="limited-col">
 					 	<div class="limited-img"></div>
@@ -152,7 +160,7 @@
 				</div>
 				<div class="row old">
 					 <div class="collection-col">
-					 	<div class="collection">3</div>
+					 	<div class="collection"></div>
 					 </div>
 				</div>
 			</div>
