almost done limited offer block

--- a/project.html
+++ b/project.html
@@ -145,8 +145,33 @@
 				<div class="row limited">
 					 <div class="limited-col">
 					 	<div class="countdown-container">
-					 		<div class="status-bar"></div>
-					 		<div class="limited-text">b</div>
+					 		<div class="status-bar">
+					 			<p>LIMITED OFFER</p>
+					 			<p>STARS</p>
+					 		</div>
+					 		<div class="limited-text">
+					 			<h3>New</h3>
+					 			<h2>Sunglasses</h2>
+					 			<h4>collection at discounted price!</h4>
+					 			<div class="data-date-time">
+					 				<div class="item">
+					 					<p class="days">1</p>
+					 					<p>DAYS</p>
+					 				</div>
+					 				<div class="item">
+					 					<p class="hours">2</p>
+					 					<p>HOURS</p>
+					 				</div>
+					 				<div class="item">
+					 					<p class="minutes">3</p>
+					 					<p>MINS</p>
+					 				</div>
+					 				<div class="item">
+					 					<p class="seconds">4</p>
+					 					<p>SECS</p>
+					 				</div>
+					 			</div>
+					 		</div>
 					 		<div class="btn-container">
 					 			<a href="#" class="btn all-categories offer-button">
                 					<p>VIEW OFFERS</p>
